View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032990 | Community | OCCT:Configuration | public | 2022-05-27 09:44 | 2022-10-19 15:55 |
Reporter | kgv | Assigned To | vpozdyayev | ||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.3 | ||||
Summary | 0032990: Configuration - compilation errors since Emscripten 3.1.11 due to time_t redefined long->int | ||||
Description | Emscripten 3.1.11 has a breaking change in API time_t redefined long->int. This leads to OCCT compilation errors due to definition of global IsEqual(time_t, time_t) method. 2022-05-24T09:45:10.4242458Z /occt/src/Standard/Standard_Time.hxx:29:25: error: redefinition of 'IsEqual' 2022-05-24T09:45:10.4243046Z inline Standard_Boolean IsEqual (const Standard_Time theOne, 2022-05-24T09:45:10.4243403Z ^ 2022-05-24T09:45:10.4243891Z /occt/src/Standard/Standard_Integer.hxx:126:25: note: previous definition is here 2022-05-24T09:45:10.4244417Z inline Standard_Boolean IsEqual (const Standard_Integer theOne, 2022-05-24T09:45:10.4244753Z | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32990 has been created by kgv. SHA-1: 3c9a3bb5d401ce35889dfc118d11ec6eab10923d Detailed log of new commits: Author: kgv Date: Fri May 27 09:56:50 2022 +0300 0032990: Configuration - compilation errors since Emscripten 3.1.11 due to time_t redefined long->int Add std::is_same filter to IsEqual(time_t, time_t) definition. |
|
Branch CR32990 has been updated forcibly by kgv. SHA-1: 48e4aad412f7153f34167dd68c35654364ebde73 |
|
Patch is ready for review - OCCT: branch CR32990. http://jenkins-test-occt/view/CR32990-master-KGV/ |
|
I have no remarks, but could you please run jenkins again? I cannot open results of Windows-related testing. |
|
Please check restarted job. |
|
Reviewed. For integration: occt - CR32990 products - none |
|
Combination - OCCT branch : IR-2022-06-04 master SHA - 24e4b3c83b237dad583f87c983eb06433d56c203 e0ceb716c70188b98130b1550914140d0502a6f9 Products branch : IR-2022-06-04 SHA - ad07e82b28135dbba6cde30827d08f1c0598cf50 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18736.560000000623 / 18755.550000000607 [-0.10%] Products Total CPU difference: 11708.410000000114 / 11723.710000000106 [-0.13%] Windows-64-VC14: OCCT Total CPU difference: 20637.375 / 20721.125 [-0.40%] Products Total CPU difference: 13299.6875 / 13249.9375 [+0.38%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32990 has been deleted by mnt. SHA-1: 48e4aad412f7153f34167dd68c35654364ebde73 |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-05-27 09:44 | kgv | New Issue | |
2022-05-27 09:44 | kgv | Assigned To | => bugmaster |
2022-05-27 09:45 | kgv | Description Updated | |
2022-05-27 09:56 | git | Note Added: 0108638 | |
2022-05-29 12:11 | git | Note Added: 0108731 | |
2022-05-29 12:45 | kgv | Assigned To | bugmaster => aml |
2022-05-29 12:45 | kgv | Status | new => resolved |
2022-05-29 12:45 | kgv | Test case number | => N/A |
2022-05-29 12:45 | kgv | Note Added: 0108732 | |
2022-05-30 08:24 | aml | Assigned To | aml => kgv |
2022-05-30 08:24 | aml | Status | resolved => assigned |
2022-05-30 08:24 | aml | Note Added: 0108739 | |
2022-05-30 11:14 | kgv | Assigned To | kgv => aml |
2022-05-30 11:14 | kgv | Status | assigned => resolved |
2022-05-30 11:14 | kgv | Note Added: 0108741 | |
2022-05-30 12:21 | aml | Assigned To | aml => bugmaster |
2022-05-30 12:21 | aml | Status | resolved => reviewed |
2022-05-30 12:21 | aml | Note Added: 0108744 | |
2022-06-04 10:09 |
|
Test case number | N/A => Not required |
2022-06-04 10:10 |
|
Status | reviewed => tested |
2022-06-04 10:10 |
|
Note Added: 0108848 | |
2022-06-04 12:56 | kgv | Changeset attached | => occt master 48e4aad4 |
2022-06-04 12:57 | kgv | Assigned To | bugmaster => kgv |
2022-06-04 12:57 | kgv | Status | tested => verified |
2022-06-04 12:57 | kgv | Resolution | open => fixed |
2022-06-04 12:59 | git | Note Added: 0108858 | |
2022-06-13 10:23 | kgv | Target Version | 7.7.0 => 7.6.3 |
2022-10-19 15:55 | smoskvin | Assigned To | kgv => vpozdyayev |