0032990: Configuration - compilation errors since Emscripten 3.1.11 due to time_t redefined long->int

Add std::is_same filter to IsEqual(time_t, time_t) definition.